my perfect website

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unbreakable Friendship Bond | A Gift by Toti</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="/friend.js">
+    <link rel="stylesheet" href="/style.css">
+   
 </head>
 <body>
     <header>
@@ -29,8 +29,7 @@
             <li><a href="#hlu">HLU</a></li>
         </ul>
     </nav>
-    <link rel="stylesheet" href="/friends.css">
-
+   
     <main>
         <!-- LEMI -->
         <section id="lemi">
@@ -65,7 +64,7 @@
         <!-- NATI -->
         <section id="nati">
             <h2>NATII</h2>
-            <p><i>nati my brother i dont forget what you have done for me maybe days and yeras 
+            <p><i>nati my brother i dont forget what you have done for me maybe days and years 
                 will past but i will never forgot it you shows me what is true friendship we 
             have been fired from class together we have laughed a lot our memory never dies my bro
         i respect you chelsea boy till the end</i></p>
@@ -99,7 +98,7 @@
                   <img src="/css/misbesh/misbesh2.png" alt="">
             </figure>
         </section>
-        <section>
+        <section id="hlu">
             <h2>HLU</h2>
                 <p>you astonshining girl silent killer you are out of this world you combine both 
                     ethics and descipline you deserve a great respect we love you we respect you this 
@@ -257,7 +256,7 @@
         {src: "/css/kaku/5897924184535403723.jpg", alt: "" ,person: ""},
         {src: "/css/sosi/5897924184535403731.jpg", alt: "" ,person: ""},
         {src: "/css/misbesh/misbesh.png", alt: "" ,person: ""},
-        {src: "css/kaku/5897714590131358732.jpg", alt: "" ,person: ""},
+        {src: "/css/kaku/5897714590131358732.jpg", alt: "" ,person: ""},
         {src: "/css/all/5897714590131358732 (copy 1).jpg", alt: "" ,person: ""},
         {src: "/css/all/5897714590131358790.jpg", alt: "" ,person: ""},
         {src: "/css/all/5897714590131358747.jpg", alt: "" ,person: ""},
